# oop_misis_2021

./: .gitignore  CMakeLists.txt  CODEOWNERS  Dynamic.cpp  Dynamic.h  Exam.h  KR703  Matrix.h  README.md  Rational.cpp  din.cpp  din.h  dopusk228.cpp  dopusk229.cpp  dyn.cpp  dynamic.cpp  hello_world.h  keke.w  kr.cpp  kr.h  main.cpp  main.h  matrix.cpp  matrix.h  mySet.cpp  mySet.h  myStack.cpp  myStack.h  queue.cpp  queue.h  rac.cpp  rac.h  rational.cpp  rational.h  stack.cpp  stack.h  test.cpp  vector.cpp  vector.h
Alexandrov_n_a/: CMakeLists.txt
Antipov_L_V/: CMakeLists.txt  Set.h  hello_world.h  main.cpp  set.cpp  test.cpp
Basalova A A/: rac.h
Basalova_a_a/: CMakeLists.txt
Belkevich/: CMakeLists.txt
Borodkina/: CmakeLists.txt
Bsasalova A A/: din.cpp  test.cpp
DemidovichSP/HelloWorld/: CMakeLists.txt  doctest.h  helloWorld.cpp  helloWorld.h  test.cpp
Gavryushov/: CMakeLists.txt
Gavryushov_exam/: executable.cpp  header.h
Golovznin_M_A/: CMakeLists.txt
Kashpar_E_E/: CMakeLists.txt
Kr/: CMakeLists.txt  gist.h  test.cpp
Kudzh_O_S/: CMakeLists.txt
Moshchenok_E_A/: CMakeLists.txt
Novitskiy_L_R/: CMakeLists.txt
Rational/: CMakeLists.txt  Rational.cpp  Rational.h  test.cpp
Rational_1/: CMakeLists.txt  Rational.cpp  Rational.h
Sidorenko_D_M/: CMakeLists.txt
Ten_d_s/: CMakeLists.txt
Tripolsky_D_A/: CMakeLists.txt  doctest.cmake
Tsykanov_A/: CMakeLists.txt
Vakhrameev_N_O/: CMakeLists.txt
alexandrov_n_a_hello_world/: CMakeLists.txt
allayarov_t_r/: .gitignore  CMakeLists.txt
anysimova_n_s/: CMakeLists.txt
artamonov_d_a/: CMakeLists.txt
boriskin_a_a/: CMakeLists.txt
bryzgalova_j_a/: CMakeLists.txt  control_work  dinamic_array.h  dynamic_array.cpp  exam  matrix.cpp  matrix.h  test.cpp
bychkova_m_v/: CMakeLists.txt
code/: CMakeLists.txt
darrey/: CMakeLists.txt  darrey.cpp  darrey.h  test.cpp
dynamic/: dynamic.cpp  dynamic.h  test.cpp
dynamic_array/: dyn.h
efimenko_m_y/: CMakeLists.txt
fadeev_a_u/: CMakeLists.txt
fedor_avil/: CMakeLists.txt
gurov_e_p/: CMakeLists.txt
hello_world/: CMakeLists.txt  hello_world.h  main.cpp  test.cpp
kr/: CMakeLists.txt  dict.h  kr.sln  main.cpp
kudzh_o_s/: CMakeLists.txt
larin_a_d/: CMakeLists.txt
magomedov_m_m/: CMakeLists.txt
map/: map.h  map.main.cpp  map_iterator.h
martynov_s_i/: CMakeLists.txt  Stack.cpp  Stack.h
martynov_s_i_rational/: CMakeLists.txt
panin_s_a/: CMakeLists.txt
pleshakov_i_n/: CMakeLists.txt
rational/: .gitignore  CMakeLists.txt  Rational.cpp  Rational.h  main.cpp  rational.cpp  rational.h  test.cpp
rational_numbers/: CMakeLists.txt  rational.cpp  rational.h  test.cpp
romanenko_y_a/: CMakeLists.txt
shabaev_r_a/: CMakeLists.txt
shabaev_roman_kr/: dinamic_array.h  stack.h
shinkarenko_r_o/: CMakeLists.txt
sivkin_a_s/: CMakeLists.txt
skobelev_i_s/: CMakeLists.txt
skobelev_i_s_queue/: queue.cpp  queue.h
strijakov/: CMakeLists.txt
tarasov_e_v/dynamic_array/: CMakeLists.txt  dynamicarray.cpp  dynamicarray.h  test.cpp
(+850 files in other folders)
